--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ body {
 header {
     display: flex;
     align-items: center;
+    margin-bottom: 40px;
 }
 
 header img {
@@ -29,4 +30,21 @@ header h1 {
 .container {
     max-width: 960px;
     width: 100%;
+    margin: 0 auto;
+}
+
+form input{
+    font-size: 24px;
+    background-color: #fff;
+    border: none;
+    border-bottom: 2px solid #000;
+}
+
+form button{
+    background-color: #009432;
+    color: #fff;
+    font-size: 24px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
 }
