--- a/main.css
+++ b/main.css
@@ -33,11 +33,19 @@ header h1 {
     margin: 0 auto;
 }
 
+form {
+    display: flex;
+    max-width: 640px;
+    justify-content: space-between;
+    margin-bottom: 56px;
+}
+
 form input{
     font-size: 24px;
     background-color: #fff;
     border: none;
     border-bottom: 2px solid #000;
+    padding: 8px;
 }
 
 form button{
@@ -47,4 +55,44 @@ form button{
     font-weight: bold;
     border: none;
     cursor: pointer;
+    padding: 8px;
+}
+
+table {
+    width: 100%;
+}
+
+table th {
+    border-bottom: 2px solid #000;
+    padding: 16px;
+    font-size: 24px;
+    font-weight: bold;
+
+}
+
+table td {
+    padding: 8px 0;
+    text-align: center;
+    font-size: 18px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+table td img {
+    height: 30px;
+}
+
+.results {
+    padding: 8px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #000;
+    border-radius: 3px;
+}
+
+.approved {
+    background-color: #009432;
+}
+
+.disaproved {
+    background-color: red;
 }
